fixed overflow/functionality

--- a/index.css
+++ b/index.css
@@ -9,13 +9,14 @@ body{
   font-family: 'Open Sans', sans-serif;
 }
 .wrapper{
-  background-color: #374352;
+  background-color: #1e1e1e;
   border-radius: 10px;
   display: flex;
   justify-content: center;
   flex-direction: column;
   margin-top: 100px;
-  width: 17%;
+  width: 270px;
+  padding: 10px;
   color: #8b9695;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
@@ -26,26 +27,35 @@ body{
   padding: 5px;
 }
 .result-display{
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: self-end;
   padding: 5px;
+  margin-left: 10px;
 }
 .final-result{
-  font-size: 40px;
+  margin: 0;
+  font-size: 35px;
+  color: white;
 }
 .calc-display{
+  margin-top:0;
+  overflow: hidden;
+  margin-left: 10px;
+  height: 20px;
   font-size: 15px;
-  margin-top: -40px;
 }
 
 .container div{
+  font-size: 20px;
+  font-weight: 600;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50px;
-  height: 50px;
-  border-radius: 10px;
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
   margin-bottom: 10px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   cursor: pointer;
@@ -58,6 +68,15 @@ body{
   transition-duration: .6s;
 
 }
-.number{
+.number, .backspace{
+  background-color: #424242;
+  color: white;
+}
+#top{
+  background-color: #b8b8b9;
+  color: black;
+}
+.operator{
+  background-color: #f99c14;
   color: white;
 }
